--- a/index.html
+++ b/index.html
@@ -172,9 +172,7 @@
       </div><!-- end .meta-label -->
       <br />
 
-      <p>In this final post in the series on advanced Redux in Xamarin, we’ll look at how to integrate a local database with Redux, we’ll write Middleware that intercepts CRUD Actions and applies them to our database.</p>
-
-
+      <p>In this final post in the series on advanced Redux in Xamarin, we'll look at how to integrate a local database with Redux, we'll write Middleware that intercepts CRUD Actions and applies them to our database.</p>
 
       <a class="btn btn-default btn-read-more" href="/programming/advanced-redux-in-xamarin-part3-database-middleware/" title="Read full article">Read Article</a>
 
