--- a/programming/advanced-redux-in-xamarin-part3-database-middleware/index.html
+++ b/programming/advanced-redux-in-xamarin-part3-database-middleware/index.html
@@ -14,7 +14,7 @@
   
 
   <title>Advanced Redux in Xamarin Part 3: Database Middleware | phdesign</title>
-  <meta name="description" content="In this final post in the series on advanced Redux in Xamarin, we’ll look at how to integrate a local database with Redux, we’ll write Middleware that interc...">
+  <meta name="description" content="In this final post in the series on advanced Redux in Xamarin, we&#39;ll look at how to integrate a local database with Redux, we&#39;ll write Middleware that interc...">
 
   <link rel="stylesheet" href="/assets/css/main.css">
   <link rel="canonical" href="http://phdesign.com.au/programming/advanced-redux-in-xamarin-part3-database-middleware/">
@@ -133,7 +133,11 @@
     
     
 
-    <p>In this final post in the series on advanced Redux in Xamarin, we’ll look at how to integrate a local database with Redux, we’ll write Middleware that intercepts CRUD Actions and applies them to our database.</p>
+    <div class="alert alert-info" role="alert">
+<a href="https://github.com/phdesign/TodoRedux" title="View project on GitHub" target="_blank">Want to skip to the code? View the sample project on GitHub.</a>
+</div>
+
+<p>In this final post in the series on advanced Redux in Xamarin, we’ll look at how to integrate a local database with Redux, we’ll write Middleware that intercepts CRUD Actions and applies them to our database.</p>
 
 <!--more-->
 
