--- a/npptoolbucket/index.html
+++ b/npptoolbucket/index.html
@@ -125,8 +125,8 @@
 </ul>
 <h2>Download</h2>
 <p>
-  <a href="/assets/files/NppToolBucket-1.8.zip" alt="Download NppToolBucket v1.8 (32-bit verison)">NppToolBucket-1.8.zip</a> (32-bit version)<br/>
-  <a href="/assets/files/NppToolBucket-1.8-x64.zip" alt="Download NppToolBucket v1.8 (64-bit verison)">NppToolBucket-1.8-x64.zip</a> (64-bit version)
+  <a href="/assets/files/NppToolBucket-1.9.zip" alt="Download NppToolBucket v1.9 (32-bit verison)">NppToolBucket-1.9.zip</a> (32-bit version)<br/>
+  <a href="/assets/files/NppToolBucket-1.9-x64.zip" alt="Download NppToolBucket v1.9 (64-bit verison)">NppToolBucket-1.9-x64.zip</a> (64-bit version)
 </p>
 <h2>Source code</h2>
 <p>
@@ -143,10 +143,21 @@
   Requires .NET Framework 3.5 or higher to be installed on the system.
 </p>
 <h2>Screenshots</h2>
-<p><img src="/assets/img/pages/ToolBucket1.png" alt=""></p>
-<p><img src="/assets/img/pages/ToolBucket2.png" alt=""></p>
-<p><img src="/assets/img/pages/ToolBucket3.png" alt=""></p>
+<p><img src="/assets/img/pages/ToolBucket1.png" alt="Screenshot of ToolBucket menu options"></p>
+<p><img src="/assets/img/pages/ToolBucket2.png" alt="Screenshot of ToolBucket indentation options"></p>
+<p><img src="/assets/img/pages/ToolBucket3.png" alt="Screenshot of ToolBucket multiline search and replace"></p>
+<p><img src="/assets/img/pages/ToolBucket4.png" alt="Screenshot of ToolBucket GUID generation options"></p>
 <h2>Version history</h2>
+<h3>v1.9</h3>
+<p>
+  <a href="/assets/files/NppToolBucket-1.9.zip" alt="Download NppToolBucket v1.9 (32-bit verison)">NppToolBucket-1.9.zip</a><br/>
+  <a href="/assets/files/NppToolBucket-1.9-x64.zip" alt="Download NppToolBucket v1.9 (64-bit verison)">NppToolBucket-1.9-x64.zip</a>
+</p>
+<ul>
+  <li>Don't insert newline after last GUID</li>
+  <li>Save GUID generation options to config file</li>
+  <li>Add option to not prompt for GUID generation options each time (just use config settings)</li>
+</ul>
 <h3>v1.8</h3>
 <p>
   <a href="/assets/files/NppToolBucket-1.8.zip" alt="Download NppToolBucket v1.8 (32-bit verison)">NppToolBucket-1.8.zip</a><br/>
