--- a/npptoolbucket/index.html
+++ b/npptoolbucket/index.html
@@ -148,7 +148,7 @@
 <p><img src="/assets/img/pages/ToolBucket3.png" alt="Screenshot of ToolBucket multiline search and replace"></p>
 <p><img src="/assets/img/pages/ToolBucket4.png" alt="Screenshot of ToolBucket GUID generation options"></p>
 <h2>Version history</h2>
-<h3>v1.9</h3>
+<h3>v1.9 (Aug 2017)</h3>
 <p>
   <a href="/assets/files/NppToolBucket-1.9.zip" alt="Download NppToolBucket v1.9 (32-bit verison)">NppToolBucket-1.9.zip</a><br/>
   <a href="/assets/files/NppToolBucket-1.9-x64.zip" alt="Download NppToolBucket v1.9 (64-bit verison)">NppToolBucket-1.9-x64.zip</a>
@@ -158,7 +158,7 @@
   <li>Save GUID generation options to config file</li>
   <li>Add option to not prompt for GUID generation options each time (just use config settings)</li>
 </ul>
-<h3>v1.8</h3>
+<h3>v1.8 (Jun 2017)</h3>
 <p>
   <a href="/assets/files/NppToolBucket-1.8.zip" alt="Download NppToolBucket v1.8 (32-bit verison)">NppToolBucket-1.8.zip</a><br/>
   <a href="/assets/files/NppToolBucket-1.8-x64.zip" alt="Download NppToolBucket v1.8 (64-bit verison)">NppToolBucket-1.8-x64.zip</a>
@@ -166,21 +166,21 @@
 <ul>
   <li>Update project template to support creation of x64 version</li>
 </ul>
-<h3>v1.7</h3>
+<h3>v1.7 (Nov 2015)</h3>
 <p>
   <a href="/assets/files/NppToolBucket-1.7.zip" alt="Download NppToolBucket v1.7">NppToolBucket-1.7.zip</a>
 </p>
 <ul>
   <li>Persisting 'Search In' option, window size and window location for the Find and Replace dialog</li>
 </ul>
-<h3>v1.6</h3>
+<h3>v1.6 (May 2015)</h3>
 <p>
   <a href="/assets/files/NppToolBucket-1.6.zip" alt="Download NppToolBucket v1.6">NppToolBucket-1.6.zip</a>
 </p>
 <ul>
   <li>Added support for searching and replacing Unicode characters</li>
 </ul>
-<h3>v1.5</h3>
+<h3>v1.5 (Apr 2014)</h3>
 <p>
   <a href="/assets/files/NppToolBucket-1.5.zip" alt="Download NppToolBucket v1.5">NppToolBucket-1.5.zip</a>
 </p>
@@ -191,7 +191,7 @@
     A bugfix for the indentation settings dialog where settings are applied even if cancelled
   </li>
 </ul>
-<h3>v1.4</h3>
+<h3>v1.4 (Jun 2012)</h3>
 <p>
   <a href="/assets/files/NppToolBucket-1.4.zip" alt="Download NppToolBucket v1.4">NppToolBucket-1.4.zip</a>
 </p>
@@ -204,14 +204,14 @@
     Increase search / replace history length in dropdown to 60 characters and removed line breaks
   </li>
 </ul>
-<h3>v1.3</h3>
+<h3>v1.3 (Jan 2012)</h3>
 <p>
   <a href="/assets/files/NppToolBucket-1.3.zip" alt="Download NppToolBucket v1.3">NppToolBucket-1.3.zip</a>
 </p>
 <ul>
   <li>Implemented replace all in all open documents</li>
 </ul>
-<h3>v1.2</h3>
+<h3>v1.2 (Jan 2012)</h3>
 <p>
   <a href="/assets/files/NppToolBucket-1.2.zip" alt="Download NppToolBucket v1.2">NppToolBucket-1.2.zip</a>
 </p>
