--- a/programming/advanced-redux-in-xamarin-part3-database-middleware/index.html
+++ b/programming/advanced-redux-in-xamarin-part3-database-middleware/index.html
@@ -356,6 +356,9 @@
       </div>
       <div class="next col-xs-6 col-sm-4 col-sm-offset-4">
         
+          <div class="meta-label"><a href="/programming/vanilla-mvvm-for-xamarin-forms/">Next post <span aria-hidden="true">&raquo;</span></a></div>
+          <div class="meta-value"><a href="/programming/vanilla-mvvm-for-xamarin-forms/">Vanilla MVVM for Xamarin Forms</a></div>
+        
       </div>
     </nav><!-- end .post_nav -->
 
