--- a/programming/index.html
+++ b/programming/index.html
@@ -110,11 +110,26 @@
   	  <div class="container">
 
   <div class="meta-label-lg">
-    Showing 25 posts  filed in 
+    Showing 26 posts  filed in 
     <span class="meta-value">programming</span>
   </div><!-- end .meta-label-lg -->
 
 </div>
+
+  <article>
+    <div class="container">
+
+      <h3><a href="/programming/vanilla-mvvm-for-xamarin-forms/" title="Read full article">Vanilla MVVM for Xamarin Forms</a></h3>
+      <div class="meta-label">
+        posted on <span class="meta-value muted">19 December 2017</span>
+        
+          in <span class="meta-value"><a href="/programming">programming</a></span>
+        
+        with <span class="meta-value"><a data-disqus-identifier="Vanilla MVVM for Xamarin Forms" href="#disqus_thread">0 Comments</a></span>
+      </div><!-- end .meta-label -->
+
+    </div>
+  </article>
 
   <article>
     <div class="container">
