--- a/programming/vanilla-mvvm-for-xamarin-forms/index.html
+++ b/programming/vanilla-mvvm-for-xamarin-forms/index.html
@@ -424,6 +424,9 @@
       </div>
       <div class="next col-xs-6 col-sm-4 col-sm-offset-4">
         
+          <div class="meta-label"><a href="/programming/how-to-write-better-angularjs/">Next post <span aria-hidden="true">&raquo;</span></a></div>
+          <div class="meta-value"><a href="/programming/how-to-write-better-angularjs/">How to write better AngularJS</a></div>
+        
       </div>
     </nav><!-- end .post_nav -->
 
