--- a/general/adding-font-awesome-icons-to-google-slides/index.html
+++ b/general/adding-font-awesome-icons-to-google-slides/index.html
@@ -122,7 +122,7 @@
       
         in <span class="meta-value"><a href="/general">general</a></span>
       
-      with <span class="meta-value"><a data-disqus-identifier="http://phdesign.com.au/general/adding-font-awesome-icons-to-google-slides/" href="#disqus_thread">0 Comments</a></span>
+      with <span class="meta-value"><a href="http://phdesign.com.au/general/adding-font-awesome-icons-to-google-slides/#disqus_thread">0 Comments</a></span>
     </div><!-- end .meta-label -->
     <br />
 
@@ -207,6 +207,8 @@ Unfortunately you can’t import an SVG directly but you can import a similar fo
           (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
         })();
       </script>
+      <!-- Used to get the comment count -->
+      <script id="dsq-count-scr" src="//phdesign.disqus.com/count.js" async></script>
       <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
 
 
