--- a/programming/no-validation-messages-when-disabling-enabling-asp-net-validator-in-javascript/index.html
+++ b/programming/no-validation-messages-when-disabling-enabling-asp-net-validator-in-javascript/index.html
@@ -122,7 +122,7 @@
       
         in <span class="meta-value"><a href="/programming">programming</a></span>
       
-      with <span class="meta-value"><a data-disqus-identifier="http://phdesign.com.au/programming/no-validation-messages-when-disabling-enabling-asp-net-validator-in-javascript/" href="#disqus_thread">0 Comments</a></span>
+      with <span class="meta-value"><a href="http://phdesign.com.au/programming/no-validation-messages-when-disabling-enabling-asp-net-validator-in-javascript/#disqus_thread">0 Comments</a></span>
     </div><!-- end .meta-label -->
     <br />
 
@@ -221,6 +221,8 @@ If Page_IsValid is false then assume the user has tried to submit but failed, in
           (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
         })();
       </script>
+      <!-- Used to get the comment count -->
+      <script id="dsq-count-scr" src="//phdesign.disqus.com/count.js" async></script>
       <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
 
 
