--- a/general/converting-topfield-pvr-recordings/index.html
+++ b/general/converting-topfield-pvr-recordings/index.html
@@ -122,7 +122,7 @@
       
         in <span class="meta-value"><a href="/general">general</a></span>
       
-      with <span class="meta-value"><a data-disqus-identifier="http://phdesign.com.au/general/converting-topfield-pvr-recordings/" href="#disqus_thread">0 Comments</a></span>
+      with <span class="meta-value"><a href="http://phdesign.com.au/general/converting-topfield-pvr-recordings/#disqus_thread">0 Comments</a></span>
     </div><!-- end .meta-label -->
     <br />
 
@@ -208,6 +208,8 @@ Transferring about 8 recorded shows and 4 movies took under 30 mins, this takes 
           (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
         })();
       </script>
+      <!-- Used to get the comment count -->
+      <script id="dsq-count-scr" src="//phdesign.disqus.com/count.js" async></script>
       <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
 
 
