--- a/general/excel-templates-for-scrum-product-and-sprint-backlogs/index.html
+++ b/general/excel-templates-for-scrum-product-and-sprint-backlogs/index.html
@@ -122,7 +122,7 @@
       
         in <span class="meta-value"><a href="/general">general</a></span>
       
-      with <span class="meta-value"><a data-disqus-identifier="http://phdesign.com.au/general/excel-templates-for-scrum-product-and-sprint-backlogs/" href="#disqus_thread">0 Comments</a></span>
+      with <span class="meta-value"><a href="http://phdesign.com.au/general/excel-templates-for-scrum-product-and-sprint-backlogs/#disqus_thread">0 Comments</a></span>
     </div><!-- end .meta-label -->
     <br />
 
@@ -201,6 +201,8 @@
           (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
         })();
       </script>
+      <!-- Used to get the comment count -->
+      <script id="dsq-count-scr" src="//phdesign.disqus.com/count.js" async></script>
       <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
 
 
