--- a/programming/create-branch-of-modified-working-copy-in-tfs/index.html
+++ b/programming/create-branch-of-modified-working-copy-in-tfs/index.html
@@ -122,7 +122,7 @@
       
         in <span class="meta-value"><a href="/programming">programming</a></span>
       
-      with <span class="meta-value"><a data-disqus-identifier="http://phdesign.com.au/programming/create-branch-of-modified-working-copy-in-tfs/" href="#disqus_thread">0 Comments</a></span>
+      with <span class="meta-value"><a href="http://phdesign.com.au/programming/create-branch-of-modified-working-copy-in-tfs/#disqus_thread">0 Comments</a></span>
     </div><!-- end .meta-label -->
     <br />
 
@@ -196,6 +196,8 @@ To do this you need TFS Power Tools ‘unshelve’. More info here:<br />
           (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
         })();
       </script>
+      <!-- Used to get the comment count -->
+      <script id="dsq-count-scr" src="//phdesign.disqus.com/count.js" async></script>
       <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
 
 
