--- a/programming/delete-dependent-entities-when-removed-from-ef-collection/index.html
+++ b/programming/delete-dependent-entities-when-removed-from-ef-collection/index.html
@@ -122,7 +122,7 @@
       
         in <span class="meta-value"><a href="/programming">programming</a></span>
       
-      with <span class="meta-value"><a data-disqus-identifier="http://phdesign.com.au/programming/delete-dependent-entities-when-removed-from-ef-collection/" href="#disqus_thread">0 Comments</a></span>
+      with <span class="meta-value"><a href="http://phdesign.com.au/programming/delete-dependent-entities-when-removed-from-ef-collection/#disqus_thread">0 Comments</a></span>
     </div><!-- end .meta-label -->
     <br />
 
@@ -207,6 +207,8 @@ I have an Entity Framework model being used in the business layer called Patient
           (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
         })();
       </script>
+      <!-- Used to get the comment count -->
+      <script id="dsq-count-scr" src="//phdesign.disqus.com/count.js" async></script>
       <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
 
 
