--- a/npptoolbucket/index.html
+++ b/npptoolbucket/index.html
@@ -125,8 +125,8 @@
 </ul>
 <h2>Download</h2>
 <p>
-  <a href="/assets/files/NppToolBucket-1.9.zip" alt="Download NppToolBucket v1.9 (32-bit verison)">NppToolBucket-1.9.zip</a> (32-bit version)<br/>
-  <a href="/assets/files/NppToolBucket-1.9-x64.zip" alt="Download NppToolBucket v1.9 (64-bit verison)">NppToolBucket-1.9-x64.zip</a> (64-bit version)
+  <a href="/assets/files/NppToolBucket-1.10.zip" alt="Download NppToolBucket v1.10 (32-bit verison)">NppToolBucket-1.10.zip</a> (32-bit version)<br/>
+  <a href="/assets/files/NppToolBucket-1.10-x64.zip" alt="Download NppToolBucket v1.10 (64-bit verison)">NppToolBucket-1.10-x64.zip</a> (64-bit version)
 </p>
 <h2>Source code</h2>
 <p>
@@ -148,6 +148,15 @@
 <p><img src="/assets/img/pages/ToolBucket3.png" alt="Screenshot of ToolBucket multiline search and replace"></p>
 <p><img src="/assets/img/pages/ToolBucket4.png" alt="Screenshot of ToolBucket GUID generation options"></p>
 <h2>Version history</h2>
+<h3>v1.10 (Feb 2018)</h3>
+<p>
+  <a href="/assets/files/NppToolBucket-1.10.zip" alt="Download NppToolBucket v1.10 (32-bit verison)">NppToolBucket-1.10.zip</a><br/>
+  <a href="/assets/files/NppToolBucket-1.10-x64.zip" alt="Download NppToolBucket v1.10 (64-bit verison)">NppToolBucket-1.10-x64.zip</a>
+</p>
+<ul>
+  <li>Add menu item "Clear find all" to remove all bookmarks</li>
+  <li>Add support for Find All / Count to work with "All Open Documents"</li>
+</ul>
 <h3>v1.9 (Aug 2017)</h3>
 <p>
   <a href="/assets/files/NppToolBucket-1.9.zip" alt="Download NppToolBucket v1.9 (32-bit verison)">NppToolBucket-1.9.zip</a><br/>
