--- a/programming/faster-angularjs-tests-using-the-component-driver-pattern/index.html
+++ b/programming/faster-angularjs-tests-using-the-component-driver-pattern/index.html
@@ -260,6 +260,9 @@
       </div>
       <div class="next col-xs-6 col-sm-4 col-sm-offset-4">
         
+          <div class="meta-label"><a href="/programming/using-css-modules-with-angular-typescript-and-bootstrap/">Next post <span aria-hidden="true">&raquo;</span></a></div>
+          <div class="meta-value"><a href="/programming/using-css-modules-with-angular-typescript-and-bootstrap/">Using CSS Modules with Angular, TypeScript and Bootstrap</a></div>
+        
       </div>
     </nav><!-- end .post_nav -->
 
