--- a/programming/index.html
+++ b/programming/index.html
@@ -110,11 +110,26 @@
   	  <div class="container">
 
   <div class="meta-label-lg">
-    Showing 28 posts  filed in 
+    Showing 29 posts  filed in 
     <span class="meta-value">programming</span>
   </div><!-- end .meta-label-lg -->
 
 </div>
+
+  <article>
+    <div class="container">
+
+      <h3><a href="/programming/using-css-modules-with-angular-typescript-and-bootstrap/" title="Read full article">Using CSS Modules with Angular, TypeScript and Bootstrap</a></h3>
+      <div class="meta-label">
+        posted on <span class="meta-value muted">21 February 2018</span>
+        
+          in <span class="meta-value"><a href="/programming">programming</a></span>
+        
+        with <span class="meta-value"><a href="http://phdesign.com.au/programming/using-css-modules-with-angular-typescript-and-bootstrap/#disqus_thread">0 Comments</a></span>
+      </div><!-- end .meta-label -->
+
+    </div>
+  </article>
 
   <article>
     <div class="container">
