--- a/programming/index.html
+++ b/programming/index.html
@@ -110,11 +110,26 @@
   	  <div class="container">
 
   <div class="meta-label-lg">
-    Showing 29 posts  filed in 
+    Showing 30 posts  filed in 
     <span class="meta-value">programming</span>
   </div><!-- end .meta-label-lg -->
 
 </div>
+
+  <article>
+    <div class="container">
+
+      <h3><a href="/programming/notepadpp-textfx-64bit/" title="Read full article">Notepad++ TextFX 0.25 x64</a></h3>
+      <div class="meta-label">
+        posted on <span class="meta-value muted">01 May 2019</span>
+        
+          in <span class="meta-value"><a href="/programming">programming</a></span>
+        
+        with <span class="meta-value"><a href="http://phdesign.com.au/programming/notepadpp-textfx-64bit/#disqus_thread">0 Comments</a></span>
+      </div><!-- end .meta-label -->
+
+    </div>
+  </article>
 
   <article>
     <div class="container">
