--- a/programming/using-css-modules-with-angular-typescript-and-bootstrap/index.html
+++ b/programming/using-css-modules-with-angular-typescript-and-bootstrap/index.html
@@ -383,6 +383,9 @@
       </div>
       <div class="next col-xs-6 col-sm-4 col-sm-offset-4">
         
+          <div class="meta-label"><a href="/programming/notepadpp-textfx-64bit/">Next post <span aria-hidden="true">&raquo;</span></a></div>
+          <div class="meta-value"><a href="/programming/notepadpp-textfx-64bit/">Notepad++ TextFX 0.25 x64</a></div>
+        
       </div>
     </nav><!-- end .post_nav -->
 
