--- a/programming/how-to-write-better-angularjs/index.html
+++ b/programming/how-to-write-better-angularjs/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <meta charset="utf-8">
-  <title>Redirecting…</title>
+  <title>Redirecting&hellip;</title>
   <link rel="canonical" href="http://phdesign.com.au/programming/write-angularjs-like-its-2018/">
-  <meta http-equiv="refresh" content="0; url=http://phdesign.com.au/programming/write-angularjs-like-its-2018/">
-  <h1>Redirecting…</h1>
-  <a href="http://phdesign.com.au/programming/write-angularjs-like-its-2018/">Click here if you are not redirected.</a>
   <script>location="http://phdesign.com.au/programming/write-angularjs-like-its-2018/"</script>
+  <meta http-equiv="refresh" content="0; url=http://phdesign.com.au/programming/write-angularjs-like-its-2018/">
+  <meta name="robots" content="noindex">
+  <h1>Redirecting&hellip;</h1>
+  <a href="http://phdesign.com.au/programming/write-angularjs-like-its-2018/">Click here if you are not redirected.</a>
 </html>
