--- a/programming/notepadpp-textfx-64bit/index.html
+++ b/programming/notepadpp-textfx-64bit/index.html
@@ -193,6 +193,9 @@
       </div>
       <div class="next col-xs-6 col-sm-4 col-sm-offset-4">
         
+          <div class="meta-label"><a href="/programming/simple-ecs-service-communication/">Next post <span aria-hidden="true">&raquo;</span></a></div>
+          <div class="meta-value"><a href="/programming/simple-ecs-service-communication/">Simple, Cost Effective ECS Service Communication</a></div>
+        
       </div>
     </nav><!-- end .post_nav -->
 
