--- a/programming/index.html
+++ b/programming/index.html
@@ -110,11 +110,26 @@
   	  <div class="container">
 
   <div class="meta-label-lg">
-    Showing 31 posts  filed in 
+    Showing 32 posts  filed in 
     <span class="meta-value">programming</span>
   </div><!-- end .meta-label-lg -->
 
 </div>
+
+  <article>
+    <div class="container">
+
+      <h3><a href="/programming/wtforms-selectfield-custom-option-attributes/" title="Read full article">WTForms SelectField with Custom Option Attributes</a></h3>
+      <div class="meta-label">
+        posted on <span class="meta-value muted">14 May 2020</span>
+        
+          in <span class="meta-value"><a href="/programming">programming</a></span>
+        
+        with <span class="meta-value"><a href="http://phdesign.com.au/programming/wtforms-selectfield-custom-option-attributes/#disqus_thread">0 Comments</a></span>
+      </div><!-- end .meta-label -->
+
+    </div>
+  </article>
 
   <article>
     <div class="container">
