--- a/programming/simple-ecs-service-communication/index.html
+++ b/programming/simple-ecs-service-communication/index.html
@@ -236,6 +236,9 @@
       </div>
       <div class="next col-xs-6 col-sm-4 col-sm-offset-4">
         
+          <div class="meta-label"><a href="/programming/wtforms-selectfield-custom-option-attributes/">Next post <span aria-hidden="true">&raquo;</span></a></div>
+          <div class="meta-value"><a href="/programming/wtforms-selectfield-custom-option-attributes/">WTForms SelectField with Custom Option Attributes</a></div>
+        
       </div>
     </nav><!-- end .post_nav -->
 
