--- a/infosec/owasp-zap-testing-cors-origin-reflection/index.html
+++ b/infosec/owasp-zap-testing-cors-origin-reflection/index.html
@@ -247,6 +247,9 @@ Origin: https://app.target.com
       </div>
       <div class="next col-xs-6 col-sm-4 col-sm-offset-4">
         
+          <div class="meta-label"><a href="/programming/duplicate-celery-logs-in-flask/">Next post <span aria-hidden="true">&raquo;</span></a></div>
+          <div class="meta-value"><a href="/programming/duplicate-celery-logs-in-flask/">Duplicate Celery logs in a Flask app</a></div>
+        
       </div>
     </nav><!-- end .post_nav -->
 
