--- a/programming/index.html
+++ b/programming/index.html
@@ -112,11 +112,26 @@
   	  <div class="container">
 
   <div class="meta-label-lg">
-    Showing 33 posts  filed in 
+    Showing 34 posts  filed in 
     <span class="meta-value">programming</span>
   </div><!-- end .meta-label-lg -->
 
 </div>
+
+  <article>
+    <div class="container">
+
+      <h3><a href="/programming/introducing-trade-monitor/" title="Read full article">Introducing Trade Monitor - a free stock notification service</a></h3>
+      <div class="meta-label">
+        posted on <span class="meta-value muted">21 February 2021</span>
+        
+          in <span class="meta-value"><a href="/programming">programming</a></span>
+        
+        with <span class="meta-value"><a href="http://phdesign.com.au/programming/introducing-trade-monitor/#disqus_thread">0 Comments</a></span>
+      </div><!-- end .meta-label -->
+
+    </div>
+  </article>
 
   <article>
     <div class="container">
