--- a/programming/duplicate-celery-logs-in-flask/index.html
+++ b/programming/duplicate-celery-logs-in-flask/index.html
@@ -303,6 +303,9 @@
       </div>
       <div class="next col-xs-6 col-sm-4 col-sm-offset-4">
         
+          <div class="meta-label"><a href="/programming/introducing-trade-monitor/">Next post <span aria-hidden="true">&raquo;</span></a></div>
+          <div class="meta-value"><a href="/programming/introducing-trade-monitor/">Introducing Trade Monitor - a free stock notification service</a></div>
+        
       </div>
     </nav><!-- end .post_nav -->
 
