--- a/general/excel-templates-for-scrum-product-and-sprint-backlogs/index.html
+++ b/general/excel-templates-for-scrum-product-and-sprint-backlogs/index.html
@@ -136,6 +136,19 @@
       <p class="deprecated alert alert-warning"><b>Warning:</b> Please consider that this post is over 6 years old and the content may no longer be relevant.</p>
     
 
+    
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:block; text-align:center;"
+     data-ad-layout="in-article"
+     data-ad-format="fluid"
+     data-ad-client="ca-pub-5982856679845951"
+     data-ad-slot="6503377131"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
+
     <p>Here’s some useful templates for managing Scrum projects using Excel. Why use Excel? For simplicity. Sometimes great software and tools are necessary, sometimes they just over complicate the process.</p>
 
 <!--more-->
