--- a/programming/auto-increment-project-version-from-travis/index.html
+++ b/programming/auto-increment-project-version-from-travis/index.html
@@ -136,6 +136,19 @@
       <p class="deprecated alert alert-warning"><b>Warning:</b> Please consider that this post is over 4 years old and the content may no longer be relevant.</p>
     
 
+    
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:block; text-align:center;"
+     data-ad-layout="in-article"
+     data-ad-format="fluid"
+     data-ad-client="ca-pub-5982856679845951"
+     data-ad-slot="6503377131"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
+
     <p>Can you effectively use <a href="https://github.com" target="_blank">GitHub</a> and <a href="https://travis-ci.org" target="_blank">Travis</a> for continuous delivery? You sure can, but managing the version number can be difficult, here’s a way to automatically increment the patch number on every deployment from Travis.</p>
 
 <!--more-->
