--- a/woodworking/pallet-wood-coffee-table/index.html
+++ b/woodworking/pallet-wood-coffee-table/index.html
@@ -136,6 +136,19 @@
       <p class="deprecated alert alert-warning"><b>Warning:</b> Please consider that this post is over 5 years old and the content may no longer be relevant.</p>
     
 
+    
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:block; text-align:center;"
+     data-ad-layout="in-article"
+     data-ad-format="fluid"
+     data-ad-client="ca-pub-5982856679845951"
+     data-ad-slot="6503377131"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
+
     <p>I’ve recently become addicted to <a href="https://www.pinterest.com/paulheasley/pallet-projects/" target="_blank">pallet wood projects on Pinterest</a>, there’s something beautiful in breathing life back into old wood, and best of all it’s free. After finding a free source of pallets I’ve tried my hand a couple of projects, some shelves for the bathroom and a <a href="https://www.pinterest.com/pin/292100725810132139/" target="_blank">pallet wood stool</a>, I was pretty happy with the results so I thought I’d try my hand at something more substantial, a coffee table. <!--more-->I based my design off of <a href="https://www.pinterest.com/pin/292100725806700361/" target="_blank">this table from Pinterest</a>, however it was a little too rustic for my wife’s taste and the colour needed to match our decor.</p>
 
 <p>I knew my kids would end up climbing all over this so it needed to be sturdy, I decided to cheat and use a mix of new wood and a length of old building supply for the frame. The first challenge was making the frame flat on all sides so I could line it with pallet wood, to achieve this I made some crudely cut lap joints with a handsaw and chisel and when assembling I made sure to offset the nails so I could drive the longer nails for the legs through both pieces.</p>
