--- a/general/converting-topfield-pvr-recordings/index.html
+++ b/general/converting-topfield-pvr-recordings/index.html
@@ -136,6 +136,19 @@
       <p class="deprecated alert alert-warning"><b>Warning:</b> Please consider that this post is over 11 years old and the content may no longer be relevant.</p>
     
 
+    
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:block; text-align:center;"
+     data-ad-layout="in-article"
+     data-ad-format="fluid"
+     data-ad-client="ca-pub-5982856679845951"
+     data-ad-slot="6503377131"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
+
     <p>This weekend I’ve been having fun moving some recording off the full hard drive of my Topfield Masterpiece and trying to convert them into the formats I want. Below is what I’ve learnt in the process, this is only going to be useful to those using Windows.</p>
 
 <!--more-->
