--- a/programming/create-branch-of-modified-working-copy-in-tfs/index.html
+++ b/programming/create-branch-of-modified-working-copy-in-tfs/index.html
@@ -136,6 +136,19 @@
       <p class="deprecated alert alert-warning"><b>Warning:</b> Please consider that this post is over 8 years old and the content may no longer be relevant.</p>
     
 
+    
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:block; text-align:center;"
+     data-ad-layout="in-article"
+     data-ad-format="fluid"
+     data-ad-client="ca-pub-5982856679845951"
+     data-ad-slot="6503377131"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
+
     <p>So you’ve been working on your code from Team Foundation Server (TFS), made changes then realised you should really have started a branch for it.</p>
 
 <p>I couldn’t find a good tutorial anywhere for how to do this so here’s the best workflow I found.</p>
