--- a/programming/github-pages-jekyll-and-grunt/index.html
+++ b/programming/github-pages-jekyll-and-grunt/index.html
@@ -136,6 +136,19 @@
       <p class="deprecated alert alert-warning"><b>Warning:</b> Please consider that this post is over 5 years old and the content may no longer be relevant.</p>
     
 
+    
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:block; text-align:center;"
+     data-ad-layout="in-article"
+     data-ad-format="fluid"
+     data-ad-client="ca-pub-5982856679845951"
+     data-ad-slot="6503377131"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
+
     <div class="alert alert-info" role="alert">
   This post is adapted from a presentation I gave at <a class="alert-link" href="http://www.webdirections.org/events/what-do-you-know-melbourne-september-2015/" target="_blank">What Do You Know Melbourne</a> on 3 September 2015
 </div>
