--- a/programming/using-grunt-with-pebble-build/index.html
+++ b/programming/using-grunt-with-pebble-build/index.html
@@ -136,6 +136,19 @@
       <p class="deprecated alert alert-warning"><b>Warning:</b> Please consider that this post is over 5 years old and the content may no longer be relevant.</p>
     
 
+    
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:block; text-align:center;"
+     data-ad-layout="in-article"
+     data-ad-format="fluid"
+     data-ad-client="ca-pub-5982856679845951"
+     data-ad-slot="6503377131"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
+
     <div class="alert alert-info" role="alert">
 <a href="https://gist.github.com/phdesign/d46425bc4a2b72cd4802" title="Get the Gist" target="_blank">Want to skip to the code? Get the Gist here.</a>
 </div>
