--- a/programming/introducing-trade-monitor/index.html
+++ b/programming/introducing-trade-monitor/index.html
@@ -154,7 +154,7 @@
 
 <p>Stock prices are provided by <a href="https://iextrading.com/developers" target="_blank">IEX</a>, for now only US stocks (NASDAQ, NYSE, IEX) are available. Stock prices are fetched every minute, it didn’t seem necessary to read them more frequently as email delivery is not usually instant anyway. For this reason Trade Monitor is better suited to long term investors, rather than day traders who need instant feedback, I’m sure there’s better solutions out there for them anyway.</p>
 
-<p>Try creating a <a href="https://iextrading.com/developers" target="_blank">stock alert notification</a> yourself.  It’s been fun building Trade Monitor, I hope others find it useful.</p>
+<p>Try creating a <a href="https://trade-monitor.com/" target="_blank">stock alert notification</a> yourself.  It’s been fun building Trade Monitor, I hope others find it useful.</p>
 
 <p><a class="btn btn-primary margin-top-lg" href="https://trade-monitor.com" title="Create a free stock notification">Create stock alert</a></p>
 
