--- a/programming/index.html
+++ b/programming/index.html
@@ -113,11 +113,26 @@
   	  <div class="container">
 
   <div class="meta-label-lg">
-    Showing 34 posts  filed in 
+    Showing 35 posts  filed in 
     <span class="meta-value">programming</span>
   </div><!-- end .meta-label-lg -->
 
 </div>
+
+  <article>
+    <div class="container">
+
+      <h3><a href="/programming/graphql-scalars-with-code-generator/" title="Read full article">Using GraphQL Scalars With Code Generator</a></h3>
+      <div class="meta-label">
+        posted on <span class="meta-value muted">18 August 2021</span>
+        
+          in <span class="meta-value"><a href="/programming">programming</a></span>
+        
+        with <span class="meta-value"><a href="http://phdesign.com.au/programming/graphql-scalars-with-code-generator/#disqus_thread">0 Comments</a></span>
+      </div><!-- end .meta-label -->
+
+    </div>
+  </article>
 
   <article>
     <div class="container">
