--- a/programming/introducing-trade-monitor/index.html
+++ b/programming/introducing-trade-monitor/index.html
@@ -180,6 +180,9 @@
       </div>
       <div class="next col-xs-6 col-sm-4 col-sm-offset-4">
         
+          <div class="meta-label"><a href="/programming/graphql-scalars-with-code-generator/">Next post <span aria-hidden="true">&raquo;</span></a></div>
+          <div class="meta-value"><a href="/programming/graphql-scalars-with-code-generator/">Using GraphQL Scalars With Code Generator</a></div>
+        
       </div>
     </nav><!-- end .post_nav -->
 
