--- a/programming/react-oauth2-authentication-with-cloudentity/index.html
+++ b/programming/react-oauth2-authentication-with-cloudentity/index.html
@@ -566,6 +566,9 @@ REACT_APP_AUTHORIZATION_URI=&lt;AUTHORIZATION URL&gt;
       </div>
       <div class="next col-xs-6 col-sm-4 col-sm-offset-4">
         
+          <div class="meta-label"><a href="/programming/apollo-server-4-serverless-graphql-upload/">Next post <span aria-hidden="true">&raquo;</span></a></div>
+          <div class="meta-value"><a href="/programming/apollo-server-4-serverless-graphql-upload/">Apollo Server 4 Serverless GraphQL Upload</a></div>
+        
       </div>
     </nav><!-- end .post_nav -->
 
