--- a/programming/index.html
+++ b/programming/index.html
@@ -109,11 +109,26 @@
   	  <div class="container">
 
   <div class="meta-label-lg">
-    Showing 37 posts  filed in 
+    Showing 38 posts  filed in 
     <span class="meta-value">programming</span>
   </div><!-- end .meta-label-lg -->
 
 </div>
+
+  <article>
+    <div class="container">
+
+      <h3><a href="/programming/modern-typescript-by-ben-beattie-hood/" title="Read full article">Modern TypeScript by Ben Beattie-Hood</a></h3>
+      <div class="meta-label">
+        posted on <span class="meta-value muted">23 January 2024</span>
+        
+          in <span class="meta-value"><a href="/programming">programming</a></span>
+        
+        with <span class="meta-value"><a href="http://phdesign.com.au/programming/modern-typescript-by-ben-beattie-hood/#disqus_thread">0 Comments</a></span>
+      </div><!-- end .meta-label -->
+
+    </div>
+  </article>
 
   <article>
     <div class="container">
