--- a/programming/apollo-server-4-serverless-graphql-upload/index.html
+++ b/programming/apollo-server-4-serverless-graphql-upload/index.html
@@ -269,6 +269,9 @@
       </div>
       <div class="next col-xs-6 col-sm-4 col-sm-offset-4">
         
+          <div class="meta-label"><a href="/programming/modern-typescript-by-ben-beattie-hood/">Next post <span aria-hidden="true">&raquo;</span></a></div>
+          <div class="meta-value"><a href="/programming/modern-typescript-by-ben-beattie-hood/">Modern TypeScript by Ben Beattie-Hood</a></div>
+        
       </div>
     </nav><!-- end .post_nav -->
 
