--- a/programming/snyk-pnpm-support/index.html
+++ b/programming/snyk-pnpm-support/index.html
@@ -279,6 +279,9 @@
       </div>
       <div class="next col-xs-6 col-sm-4 col-sm-offset-4">
         
+          <div class="meta-label"><a href="/programming/the-importance-of-pet-projects/">Next post <span aria-hidden="true">&raquo;</span></a></div>
+          <div class="meta-value"><a href="/programming/the-importance-of-pet-projects/">The Importance of Pet Projects</a></div>
+        
       </div>
     </nav><!-- end .post_nav -->
 
