--- a/engineering/the-importance-of-pet-projects/index.html
+++ b/engineering/the-importance-of-pet-projects/index.html
@@ -133,7 +133,7 @@
 
 <!--more-->
 
-<p>I heard some advice recently that engineering leaders shouldn’t encourage their engineers to work on side projects as not everyone is fortunate enough to have the spare time to write code beyond work hours. I can appreciate that, I’ve worked with talented engineers who never wrote code outside of work, and I didn’t diminish assessed their abilities or engagement. If anything, it often leaves them more rested and focused during work hours.</p>
+<p>I heard some advice recently that engineering leaders shouldn’t encourage their engineers to work on side projects as not everyone is fortunate enough to have the spare time to write code beyond work hours. I can appreciate that, I’ve worked with talented engineers who never wrote code outside of work, and it never diminished how I assessed their abilities or engagement. If anything, it often leaves them more rested and focused during work hours.</p>
 
 <p>And while I live a relatively privileged life, being a father of 3 active boys who are all involved in extracurricular activity means I am very time poor. Still, I love my side projects. I find time to work on them when then kids have gone to bed, choosing to code instead of playing games or watching TV, or occasionally while doing both.</p>
 
